# AI-Collaboration-Coach

./: .env.example  .gitignore  AI_협업_코치_프로젝트_상세설명서_v2.md  Dockerfile  Phase0_프로젝트_기반_인프라_구축.md  Phase1_DB_스키마_ORM_모델.md  Phase2_텔레그램_봇_메시지_수집.md  Phase3_외부_텍스트_입력_시스템.md  Phase4_대화_세션화_우선_처리_감지.md  Phase5A_LLM_인프라_프롬프트.md  Phase5B_분석_파이프라인_Celery_연동.md  Phase6A_검토_승인_워크플로우.md  Phase6B_정본_상태_갱신_Supersede.md  README.md  alembic.ini  docker-compose.yml  implementation_plan.md  pyproject.toml  기술_스택_추천서.md
alembic/: env.py
alembic/versions/: b5a6852ba153_initial_schema.py
apps/: __init__.py
apps/api/: config.py  dependencies.py  main.py
apps/api/routers/: analysis.py  documents.py  reviews.py  telegram.py
apps/api/schemas/: __init__.py  analysis.py  document.py  review.py  telegram.py
apps/bot/: __init__.py
apps/worker/: celery_app.py
apps/worker/tasks/: __init__.py  analysis_tasks.py  session_tasks.py
docs/: TELEGRAM_SETUP.md
scripts/: set_webhook.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: test_analysis_api.py  test_analysis_pipeline.py  test_analysis_tasks.py  test_document_upload.py  test_llm_phase5a.py  test_message_service.py  test_models.py  test_priority_detector.py  test_review_workflow.py  test_sessionizer.py  test_state_transition.py
